# PixieAI

./: LICENSE  Readme.md  app.py  fly.toml  ploomber-cloud.json  pyproject.toml  requirements.txt  streamlit_ui.py
agents/sql_agent/: agent.py
plugins/: sql_plugin.py
